networkpolicy/stage0.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stage0-allow-to-terminal
  namespace: netcatlab
  annotations:
    note: "stage0 <-> terminal"
spec:
  podSelector:
    matchLabels:
      app: stage0
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: terminal
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: terminal
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stage0-allow-to-stage1
  namespace: netcatlab
  annotations:
    note: "stage0 <-> stage1"
spec:
  podSelector:
    matchLabels:
      app: stage0
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: stage1
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: stage1
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
