networkpolicy/stage1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stage1-allow-to-stage0
  namespace: netcatlab
  annotations:
    note: "stage1 <-> stage0"
spec:
  podSelector:
    matchLabels:
      app: stage1
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: stage0
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: stage0
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stage1-allow-to-stage2
  namespace: netcatlab
  annotations:
    note: "stage1 <-> stage2"
spec:
  podSelector:
    matchLabels:
      app: stage1
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: stage2
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: stage2
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
