networkpolicy/stage2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stage2-allow-to-stage1
  namespace: netcatlab
  annotations:
    note: "stage2 <-> stage1"
spec:
  podSelector:
    matchLabels:
      app: stage2
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: stage1
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: stage1
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stage2-allow-to-stage3
  namespace: netcatlab
  annotations:
    note: "stage2 <-> stage3"
spec:
  podSelector:
    matchLabels:
      app: stage2
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: stage3
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: stage3
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
