networkpolicy/stage5.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stage5-allow-to-stage4
  namespace: netcatlab
  annotations:
    note: "stage5 <-> stage4"
spec:
  podSelector:
    matchLabels:
      app: stage5
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: stage4
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: stage4
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stage5-allow-to-stage6
  namespace: netcatlab
  annotations:
    note: "stage5 <-> stage6"
spec:
  podSelector:
    matchLabels:
      app: stage5
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: stage6
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: stage6
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
