networkpolicy/stage6.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stage6-allow-to-stage5
  namespace: netcatlab
  annotations:
    note: "stage6 <-> stage5"
spec:
  podSelector:
    matchLabels:
      app: stage6
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: stage5
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: stage5
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stage6-allow-to-stage7
  namespace: netcatlab
  annotations:
    note: "stage6 <-> stage7"
spec:
  podSelector:
    matchLabels:
      app: stage6
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: stage7
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: stage7
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
