networkpolicy/stage7.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stage7-allow-to-stage6
  namespace: netcatlab
  annotations:
    note: "stage7 <-> stage6"
spec:
  podSelector:
    matchLabels:
      app: stage7
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: stage6
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: stage6
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stage7-allow-to-stage8
  namespace: netcatlab
  annotations:
    note: "stage7 <-> stage8"
spec:
  podSelector:
    matchLabels:
      app: stage7
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: stage8
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: stage8
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
