networkpolicy/terminal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: terminal-allow-to-stage0
  namespace: netcatlab
  annotations:
    note: "terminal <-> stage0"
spec:
  podSelector:
    matchLabels:
      app: terminal
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: stage0
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: stage0
    ports:
    - protocol: TCP
      port: 2222
    - protocol: TCP
      port: 5000
